--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
     "local": "./node_modules/.bin/nodemon -L --ignore public/",
     "db:reset": "node bin/resetdb.js"
   },
-  "author": "Lighthouse Labs",
+  "author": "Terrence Kuiper & Lloyd Gerry",
   "license": "ISC",
   "dependencies": {
-    "async": "^3.1.0",
     "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cookie-session": "^1.3.3",
