--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
-    "node-sass-middleware": "^0.11.0",
+    "node-sass-middleware": "^1.0.1",
     "pg": "^6.4.2",
     "pg-native": "^3.0.0",
+    "sass": "^1.62.1",
     "twilio": "^3.36.0"
   },
   "devDependencies": {
